--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Elianefashion</title>
 
     <!--icones-->
-    <link rel="stylesheet" href="assets/fonts/style.css">
+    <link rel="stylesheet" href="./assets/fonts/style.css">
     <!-- Swiper -->
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
     />
 
     <!--styles (css da pagina))-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!--fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -140,7 +140,7 @@
             </p>
             <cite>
               <img
-                src="assets/fotos/Vitoria Vieira.png"
+                src="./assets/fotos/Vitoria Vieira.png"
                 alt=""
               />
               Vitória Vieira
@@ -156,7 +156,7 @@
             </p>
             <cite>
               <img
-                src="assets/fotos/Lidia Gomes.png"
+                src="./assets/fotos/Lidia Gomes.png"
                 alt=""
               />
               Lidia Gomes
@@ -172,7 +172,7 @@
             </p>
             <cite>
               <img
-                src="assets/fotos/ELIZANDRA FOTO.png"
+                src="./assets/fotos/ELIZANDRA FOTO.png"
                 alt="Fotos de Valeska Fabris"
               />
               
@@ -220,7 +220,7 @@
 
   <div class="divider-1"></div>
     </main>
-    <img class="logo-salao" src="assets/fotos/flooter.jpg" alt="">
+    <img class="logo-salao" src="./assets/fotos/flooter.jpg" alt="">
     <div class="divider-2"></div>
     <footer class="section">
       <div class="container grid">
@@ -251,6 +251,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- main.js -->
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
